--- a/compose.yml
+++ b/compose.yml
@@ -1,10 +1,20 @@
 version: '3.8'
 
 services:
+  redis:
+    image: redis
+    container_name: redis # most likely WON'T BE a message broker and will remain only for caching
+    ports:
+      - "6379:6379"
+    networks:
+      - localnet
+
   django-rest:
     build:
       context: ./macroeconomics_simulator
     container_name: django-rest
+    depends_on:
+      - redis
     ports:
       - "8000:8000"
     command: >
