--- a/compose.yml
+++ b/compose.yml
@@ -12,7 +12,7 @@ services:
   django-rest:
     build:
       context: ./macroeconomics_simulator
-    container_name: django-rest
+    container_name: django-rest_mes
     depends_on:
       - redis
     ports:
@@ -25,12 +25,31 @@ services:
 
   react:
     build: ./frontend
-    container_name: react
+    container_name: react_mes
     ports:
       - "3000:3000"
     command: >
       sh -c "npm start"
     restart: unless-stopped
+    networks:
+      - localnet
+
+  nginx:
+    image: nginx
+    container_name: nginx_mes
+    depends_on:
+      - django-rest
+    ports:
+      - "80:80"
+    restart: always
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf
+    command: >
+      /bin/sh -c "
+      if [ ! -f /etc/nginx/ssl/nginx.key ]; then
+        mkdir -p /etc/nginx/ssl && openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/nginx/ssl/nginx.key -out /etc/nginx/ssl/nginx.crt -subj '/CN=localhost';
+      fi &&
+      nginx -g 'daemon off;'"
     networks:
       - internet
       - localnet
