--- a/compose.yml
+++ b/compose.yml
@@ -32,6 +32,7 @@ services:
       - "3000:3000"
     environment: # instead of 192.168.1.25:80 write your local IPV4 address or remove environment from this container
       - REACT_APP_BASE_URL=http://192.168.1.25:80/api/v1
+      - REACT_APP_BASE_SSE_URL=http://192.168.1.25:80/api/sse
       - REACT_APP_WEBSOCKET_URL=ws://192.168.1.25:80/ws
     command: >
       sh -c "npm start"
