--- a/nginx.conf
+++ b/nginx.conf
@@ -27,12 +27,31 @@ http {
         gzip_types text/css image/x-icon application/javascript application/x-javascript text/javascript;
         gzip_disable msie6;
 
-        location /api/ {
+        location /api/v1/ {
             proxy_pass http://backend;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/sse/ {
+            proxy_pass http://backend;
+
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_buffering off;
+            proxy_cache off;
+            chunked_transfer_encoding off;
+
+            keepalive_timeout 1h;
+            proxy_connect_timeout 1m;
+            proxy_send_timeout 10s;
+            proxy_read_timeout 20s; #???
         }
 
         location /ws/ {
@@ -40,6 +59,7 @@ http {
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
