--- a/macroeconomics_simulator/.env
+++ b/macroeconomics_simulator/.env
@@ -1,2 +1,7 @@
 SECRET_KEY=django-insecure-8=*&ati2^j+(vt+k&aoi^x=h4)c(nnv&%(d!&g&oqmx4sega81
 DEBUG=True
+DB_NAME=macroeconomics_simulator
+DB_USER=postgres
+DB_PASSWORD=root
+DB_HOST=postgres
+DB_PORT=5432
