--- a/compose.yml
+++ b/compose.yml
@@ -114,7 +114,7 @@ services:
       - django-rest
     ports:
       - "80:80"
-    restart: always
+    restart: on-failure
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
     command: >
