--- a/compose.yml
+++ b/compose.yml
@@ -1,6 +1,27 @@
 version: '3.8'
 
 services:
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - localnet
+
+  grafana: # визуализация
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    networks:
+      - localnet
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+
   postgres:
     image: postgres:16
     container_name: postgres
@@ -26,7 +47,18 @@ services:
     container_name: rabbitmq
     ports:
       - "5672:5672"
-      - "15672:15672"
+    networks:
+      - localnet
+
+  rabbitmq-exporter:
+    image: kbudde/rabbitmq-exporter
+    container_name: rabbitmq_exporter
+    ports:
+      - "9419:9419"
+    depends_on:
+      - rabbitmq
+    environment:
+      RABBIT_URL: "http://guest:guest@rabbitmq:15672"
     networks:
       - localnet
 
@@ -34,8 +66,9 @@ services:
     build: ./frontend
     container_name: react_mes
     ports:
-      - "3000:3000"
+      - "3001:3001"
     environment: # instead of 192.168.1.25 write your local IPV4 address
+      - PORT=3001
       - REACT_APP_BASE_URL=http://192.168.1.25:80/api/v1
       - REACT_APP_BASE_SSE_URL=http://192.168.1.25:80/api/sse
       - REACT_APP_WEBSOCKET_URL=ws://192.168.1.25:80/ws
@@ -57,6 +90,8 @@ services:
       - "8000:8000"
     environment:
       DJANGO_SETTINGS_MODULE: macroeconomics_simulator.settings.dockerized
+    volumes:
+      - media_data:/app/media
     command: >
       sh -c "python manage.py initialization && python manage.py runserver 0.0.0.0:8000 --settings=macroeconomics_simulator.settings.dockerized"
     restart: unless-stopped
@@ -72,8 +107,10 @@ services:
       DJANGO_SETTINGS_MODULE: macroeconomics_simulator.settings.dockerized
     depends_on:
       - redis
+    volumes:
+      - media_data:/app/media
     command: >
-      sh -c "celery -A macroeconomics_simulator worker -l info --queues=redis_queue"
+      sh -c "sleep 25 && celery -A macroeconomics_simulator worker -l info --queues=redis_queue"
     networks:
       - localnet
 
@@ -86,8 +123,10 @@ services:
       DJANGO_SETTINGS_MODULE: macroeconomics_simulator.settings.dockerized
     depends_on:
       - rabbitmq
+    volumes:
+      - media_data:/app/media
     command: >
-      sh -c "celery -A macroeconomics_simulator worker -l info --queues=rabbitmq_queue"
+      sh -c "sleep 25 && celery -A macroeconomics_simulator worker -l info --queues=rabbitmq_queue"
     networks:
       - localnet
 
@@ -126,6 +165,9 @@ services:
     networks:
       - internet
       - localnet
+
+volumes:
+  media_data:
 
 networks:
   internet:
