--- a/prometheus.yml
+++ b/prometheus.yml
@@ -8,4 +8,23 @@ scrape_configs:
 
   - job_name: "rabbitmq"
     static_configs:
-      - targets: ["rabbitmq-exporter:9419"]
+      - targets: ["rabbitmq:15692"]
+    basic_auth:
+      username: "admin"
+      password: "admin"
+
+  - job_name: "redis" # probably no need in this one
+    static_configs:
+      - targets: ["redis-exporter:9121"]
+
+  - job_name: "postgres"
+    static_configs:
+      - targets: ["postgres-exporter:9187"]
+
+  - job_name: "node-exporter"
+    static_configs:
+      - targets: ["node-exporter:9100"]
+
+  - job_name: "cadvisor"
+    static_configs:
+      - targets: ["cadvisor:8080"]
