--- a/compose.yml
+++ b/compose.yml
@@ -38,11 +38,11 @@ services:
     container_name: react_mes
     ports:
       - "3001:3001"
-    environment: # instead of 192.168.1.25 write your local IPV4 address
+    environment: # instead of 192.168.1.25 write your local IPV4 address, if you want to load website on other devices
       - PORT=3001
-      - REACT_APP_BASE_URL=http://192.168.1.25:80/api/v1
-      - REACT_APP_BASE_SSE_URL=http://192.168.1.25:80/api/sse
-      - REACT_APP_WEBSOCKET_URL=ws://192.168.1.25:80/ws
+      #- REACT_APP_BASE_URL=http://192.168.1.25:80/api/v1
+      #- REACT_APP_BASE_SSE_URL=http://192.168.1.25:80/api/sse
+      #- REACT_APP_WEBSOCKET_URL=ws://192.168.1.25:80/ws
     command: >
       sh -c "npm start"
     restart: unless-stopped
@@ -189,16 +189,6 @@ services:
       -  "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - localnet
-
-  grafana: # Basic visualization won't be configured via docker compose
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-      - "3000:3000"
-    networks:
-      - localnet
-    volumes:
-      - ./prometheus-datasourse.yml:/etc/grafana/provisioning
 
 volumes:
   media_data:
