--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@
 /macroeconomics_simulator/logs.log
 /k8s/
 /terraform/.terraform/
+/terraform/.terraform.lock.hcl
+/terraform/terraform.tfstate
+/terraform/terraform.tfstate.backup
