--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 /.idea
 /macroeconomics_simulator/db.sqlite3
 /macroeconomics_simulator/media
+/macroeconomics_simulator/logs.log
 /macroeconomics_simulator/stock/migrations
 !macroeconomics_simulator/stock/migrations/__init__.py
+/macroeconomics_simulator/stock/tests/logs.log
+/macroeconomics_simulator/stock/tests/.pytest_cache
 /frontend/node_modules
-/macroeconomics_simulator/logs.log
 /k8s/
 /terraform/.terraform/
 /terraform/.terraform.lock.hcl
