--- a/compose.yml
+++ b/compose.yml
@@ -137,58 +137,58 @@ services:
       - internet
       - localnet
 
-  prometheus:
-    image: prom/prometheus
-    container_name: prometheus
-    volumes:
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
-    networks:
-      - localnet
+  #prometheus:
+  #  image: prom/prometheus
+  #  container_name: prometheus
+  #  volumes:
+  #    - ./prometheus.yml:/etc/prometheus/prometheus.yml
+  #  ports:
+  #    - "9090:9090"
+  #  networks:
+  #    - localnet
 
-  redis-exporter:
-    image: oliver006/redis_exporter
-    container_name: exporter_redis
-    ports:
-      - "9121:9121"
-    depends_on:
-      - redis
-    environment:
-      REDIS_ADDR: redis:6379
-    networks:
-      - localnet
+  #redis-exporter:
+  #  image: oliver006/redis_exporter
+  #  container_name: exporter_redis
+  #  ports:
+  #    - "9121:9121"
+  #  depends_on:
+  #    - redis
+  #  environment:
+  #    REDIS_ADDR: redis:6379
+  #  networks:
+  #    - localnet
 
-  postgres-exporter:
-    image: wrouesnel/postgres_exporter
-    container_name: exporter_postgres
-    environment:
-      DATA_SOURCE_NAME: "postgresql://postgres:root@postgres:5432/macroeconomics_simulator?sslmode=disable"
-    depends_on:
-      - postgres
-    ports:
-      - "9187:9187"
-    networks:
-      - localnet
+  #postgres-exporter:
+  #  image: wrouesnel/postgres_exporter
+  #  container_name: exporter_postgres
+  #  environment:
+  #    DATA_SOURCE_NAME: "postgresql://postgres:root@postgres:5432/macroeconomics_simulator?sslmode=disable"
+  #  depends_on:
+  #    - postgres
+  #  ports:
+  #    - "9187:9187"
+  #  networks:
+  #    - localnet
 
-  node-exporter:
-    image: prom/node-exporter
-    container_name: exporter_node_exporter
-    ports:
-      - "9100:9100"
-    networks:
-      - localnet
-    restart: unless-stopped
+  #node-exporter:
+  #  image: prom/node-exporter
+  #  container_name: exporter_node_exporter
+  #  ports:
+  #    - "9100:9100"
+  #  networks:
+  #    - localnet
+  #  restart: unless-stopped
 
-  cadvisor:
-    image: google/cadvisor:latest
-    container_name: cadvisor
-    ports:
-      - "8080:8080"
-    volumes:
-      -  "/var/run/docker.sock:/var/run/docker.sock"
-    networks:
-      - localnet
+  #cadvisor:
+  #  image: google/cadvisor:latest
+  #  container_name: cadvisor
+  #  ports:
+  #    - "8080:8080"
+  #  volumes:
+  #    -  "/var/run/docker.sock:/var/run/docker.sock"
+  #  networks:
+  #    - localnet
 
 volumes:
   media_data:
