--- a/k8s/infrastructure/namespaces.yaml
+++ b/k8s/infrastructure/namespaces.yaml
@@ -8,19 +8,13 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: backend
-# Only Djang
+# Django, Redis and RabbitMq workers
 ---
 apiVersion: v1
 kind: Namespace
 metadata:
   name: frontend
-# Nginx and React
----
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: celery-workers
-# Redis and RabbitMq workers
+# Nginx and React(in prod version, so mainly Nginx)
 ---
 apiVersion: v1
 kind: Namespace
