--- a/k8s/queue/celery-beat.yaml
+++ b/k8s/queue/celery-beat.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: celery-beat
           image: kuber_macroeconomics_simulator:latest
+          imagePullPolicy: Never
           command: ["sh", "-c", "sleep 30 && celery -A macroeconomics_simulator beat -l INFO"]
           env:
             - name: DJANGO_SETTINGS_MODULE
