--- a/k8s/queue/celery-worker-rabbitmq.yaml
+++ b/k8s/queue/celery-worker-rabbitmq.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: celery-worker-rabbitmq
-  namespace: celery-workers
+  namespace: backend
 spec:
   replicas: 1
   selector:
@@ -16,10 +16,13 @@ spec:
       containers:
         - name: celery-worker-rabbitmq
           image: kuber_macroeconomics_simulator:latest
+          imagePullPolicy: Never
           command: ["sh", "-c", "sleep 25 && celery -A macroeconomics_simulator worker -l info --queues=rabbitmq_queue"]
           env:
             - name: DJANGO_SETTINGS_MODULE
               value: "macroeconomics_simulator.settings.kuberized"
+            - name: CELERY_BROKER_URL
+              value: "amqp://admin:admin@rabbitmq.backend-services.svc.cluster.local:5672//"
           volumeMounts:
             - mountPath: /app/media
               name: django-mediafiles-storage
@@ -33,7 +36,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: celery-worker-rabbitmq
-  namespace: celery-workers
+  namespace: backend
 spec:
   type: ClusterIP
   ports:
