--- a/k8s/monitoring/prometheus.yaml
+++ b/k8s/monitoring/prometheus.yaml
@@ -13,9 +13,9 @@ data:
         kubernetes_sd_configs:
           - role: pod
         relabel_configs:
-          - source_labels: [__meta_kubernetes_service_name]
-            target_label: job
-            action: replace
+          - source_labels: [__address__]
+            regex: ^prometheus\.monitoring\.svc\.cluster\.local:9090$
+            action: keep
         static_configs:
           - targets: ["prometheus.monitoring.svc.cluster.local:9090"]
 
