--- a/k8s/app/frontend.yaml
+++ b/k8s/app/frontend.yaml
@@ -28,15 +28,22 @@ spec:
               value: "80"
 
 ---
-apiVersion: v1
-kind: Service
+apiVersion: networking.k8s.io/v1
+kind: Ingress # 14314(doesn't work)
 metadata:
-  name: nginx
+  name: nginx-ingress
   namespace: frontend
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  type: ClusterIP
-  ports:
-    - port: 80
-      targetPort: 80
-  selector:
-    app: nginx
+  rules:
+    - host: localhost
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: nginx
+                port:
+                  number: 80
