--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,9 @@ http {
 
     server {
         listen 80;
+        listen 443 ssl;
+        ssl_certificate /etc/nginx/ssl/nginx.crt;
+        ssl_certificate_key /etc/nginx/ssl/nginx.key;
         server_name localhost;
 
         send_timeout 10;
