--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,6 +10,7 @@ http {
     server_tokens off;
 
     server {
+        listen 80;
         listen 443 ssl;
         ssl_certificate /etc/nginx/ssl/nginx.crt;
         ssl_certificate_key /etc/nginx/ssl/nginx.key;
