--- a/k8s/databases/postgres.yaml
+++ b/k8s/databases/postgres.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: postgres
   namespace: backend-services
 spec:
+  serviceName: postgres
   replicas: 1
   selector:
     matchLabels:
@@ -25,6 +26,17 @@ spec:
               value: 'root'
           ports:
             - containerPort: 5432
+          volumeMounts:
+            - name: postgres-data
+              mountPath: /var/lib/postgresql/data
+  volumeClaimTemplates:
+    - metadata:
+        name: postgres-data
+      spec:
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 10Gi
 
 ---
 apiVersion: v1
