--- a/k8s/databases/redis.yaml
+++ b/k8s/databases/redis.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: redis
   namespace: backend-services
 spec:
+  serviceName: redis
   replicas: 1
   selector:
     matchLabels:
